--- a/package.json
+++ b/package.json
@@ -1,37 +1,38 @@
 {
-  "name": "gatsby-redux-toolkit-typescript-starter",
-  "private": true,
-  "description": "Gatsby, Redux-Toolkit and Typescript starter",
-  "version": "0.1.0",
-  "author": "Saimir Kapaj",
+  "name": "globallistings-gastby",
+  "description": "CBRE Properties",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.28",
-    "@fortawesome/free-brands-svg-icons": "^5.13.0",
-    "@fortawesome/free-regular-svg-icons": "^5.13.0",
-    "@fortawesome/free-solid-svg-icons": "^5.13.0",
-    "@fortawesome/react-fontawesome": "^0.1.9",
+    "@capacitor/cli": "^2.4.6",
+    "@capacitor/core": "^2.4.6",
+    "@capacitor/ios": "^2.4.6",
     "@reduxjs/toolkit": "^1.3.5",
+    "@types/react-ga": "^2.3.0",
+    "@types/react-select": "^4.0.13",
     "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^2.21.1",
     "gatsby-image": "^2.4.0",
-    "gatsby-plugin-manifest": "^2.4.1",
+    "gatsby-plugin-image": "^1.0.0",
+    "gatsby-plugin-manifest": "^2.12.1",
+    "gatsby-plugin-netlify-cache": "^1.2.0",
     "gatsby-plugin-offline": "^3.2.0",
     "gatsby-plugin-postcss": "^2.3.0",
     "gatsby-plugin-purgecss": "^5.0.0",
     "gatsby-plugin-react-helmet": "^3.3.0",
-    "gatsby-plugin-sharp": "^2.6.0",
+    "gatsby-plugin-sharp": "^3.0.0",
+    "gatsby-plugin-sitemap": "^3.1.0",
     "gatsby-plugin-styled-components": "^3.3.0",
-    "gatsby-plugin-tailwindcss": "^1.0.3",
     "gatsby-plugin-typescript": "^2.4.0",
-    "gatsby-source-filesystem": "^2.3.0",
-    "gatsby-transformer-sharp": "^2.5.0",
+    "gatsby-remark-images-native-lazy-load": "^1.0.0",
+    "gatsby-source-filesystem": "^3.0.0",
+    "gatsby-transformer-remark": "^2.16.1",
+    "gatsby-transformer-sharp": "^3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-ga": "^3.3.0",
     "react-helmet": "^5.2.1",
     "react-redux": "^7.2.0",
-    "styled-components": "^5.1.0",
-    "tailwind.macro": "^1.0.0-alpha.10",
-    "tailwindcss": "^1.3.5"
+    "react-select": "^4.1.0",
+    "styled-components": "^5.1.0"
   },
   "devDependencies": {
     "@microsoft/tsdoc": "^0.12.19",
@@ -52,19 +53,12 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build",
+    "build": "GATSBY_EXPERIMENTAL_REMOTE_IMAGES=1 gatsby develop",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/SaimirKapaj/gatsby-redux-toolkit-typescript-starter"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
   }
 }
